--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/PrintHelper/PrintHelperPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/PrintHelper/PrintHelperPage.xaml
@@ -24,40 +24,38 @@
                   Opacity="0" />
             <Grid x:Name="DirectPrintContainer">
                 <StackPanel x:Name="PrintableContent"
-                        Margin="50,20"
-                        Orientation="Vertical">
+                            Margin="50,20"
+                            Orientation="Vertical">
                     <Image Width="200"
-                       Source="/Assets/Photos/BigFourSummerHeat.png"
-                       Stretch="Fill" />
+                           Source="/Assets/Photos/BigFourSummerHeat.png"
+                           Stretch="Fill" />
                     <TextBlock FontSize="20"
-                           Text="Lorem Ipsum is simply dummy text of the printing and typesetting industry."
-                           TextWrapping="Wrap" />
+                               Text="Lorem Ipsum is simply dummy text of the printing and typesetting industry."
+                               TextWrapping="Wrap" />
                     <TextBlock FontSize="18"
-                           Text="Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book."
-                           TextWrapping="Wrap" />
+                               Text="Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book."
+                               TextWrapping="Wrap" />
                     <TextBlock FontSize="18"
-                           Text="It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged."
-                           TextWrapping="Wrap" />
+                               Text="It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged."
+                               TextWrapping="Wrap" />
                     <TextBlock FontSize="18"
-                           Text="It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."
-                           TextWrapping="Wrap" />
+                               Text="It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."
+                               TextWrapping="Wrap" />
                     <TextBlock FontSize="14"
-                           FontStyle="Italic"
-                           Text="From http://www.lipsum.com/"
-                           TextWrapping="Wrap" />
+                               FontStyle="Italic"
+                               Text="From http://www.lipsum.com/"
+                               TextWrapping="Wrap" />
                 </StackPanel>
             </Grid>
-            <StackPanel Orientation="Horizontal" 
-                        Grid.Row="1"
+            <StackPanel Grid.Row="1"
                         Margin="20"
-                        HorizontalAlignment="Center">
-                <Button
-                    Click="Print_Click"
-                    Content="Print Me!" />
-                <Button
-                    Margin="10,0,0,0"
-                    Click="DirectPrint_Click"
-                    Content="Direct Print Me!" />
+                        HorizontalAlignment="Center"
+                        Orientation="Horizontal">
+                <Button Click="Print_Click"
+                        Content="Print Me!" />
+                <Button Margin="10,0,0,0"
+                        Click="DirectPrint_Click"
+                        Content="Direct Print Me!" />
             </StackPanel>
         </Grid>
     </Grid>
