--- a/Microsoft.Toolkit.Uwp.SampleApp/Shell.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/Shell.xaml
@@ -98,7 +98,7 @@
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto" />
                         <ColumnDefinition />
-                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="Auto" />
                     </Grid.ColumnDefinitions>
                     <Button x:Name="ExpandButton"
                             VerticalAlignment="Stretch"
@@ -111,11 +111,11 @@
                                VerticalAlignment="Center"
                                Foreground="{StaticResource Brush-Grey-01}"
                                Text="" />
-                    <HyperlinkButton x:Name="GitHub" 
+                    <HyperlinkButton x:Name="GitHub"
                                      Grid.Column="2"
                                      Margin="0,0,10,0"
-                                     Foreground="{ThemeResource TextBoxPlaceholderTextThemeBrush}"
-                                     Content="Github"></HyperlinkButton>
+                                     Content="Github"
+                                     Foreground="{ThemeResource TextBoxPlaceholderTextThemeBrush}" />
                 </Grid>
                 <Pivot x:Name="InfoAreaPivot"
                        Grid.Row="1"
