--- a/Microsoft.Toolkit.Uwp.UI.Controls/BladeView/BladeView.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/BladeView/BladeView.xaml
@@ -46,20 +46,6 @@
                     <Border Background="{TemplateBinding Background}"
                             BorderBrush="{TemplateBinding BorderBrush}"
                             BorderThickness="{TemplateBinding BorderThickness}">
-                        <VisualStateManager.VisualStateGroups>
-                            <VisualStateGroup x:Name="BladeModeStates">
-                                <VisualState x:Name="Normal" />
-
-                                <VisualState x:Name="FullScreen">
-                                    <Storyboard>
-                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="HorizontalSnapPointsType" Storyboard.TargetName="ScrollViewer">
-                                            <DiscreteObjectKeyFrame KeyTime="0" Value="Mandatory"/>
-                                        </ObjectAnimationUsingKeyFrames>
-                                    </Storyboard>
-                                </VisualState>
-                            </VisualStateGroup>
-                        </VisualStateManager.VisualStateGroups>
-
                         <ScrollViewer x:Name="ScrollViewer"
                                       AutomationProperties.AccessibilityView="Raw"
                                       BringIntoViewOnFocusChange="{TemplateBinding ScrollViewer.BringIntoViewOnFocusChange}"
@@ -76,6 +62,21 @@
                                       ZoomMode="{TemplateBinding ScrollViewer.ZoomMode}">
                             <ItemsPresenter Padding="{TemplateBinding Padding}" />
                         </ScrollViewer>
+                        <VisualStateManager.VisualStateGroups>
+                            <VisualStateGroup x:Name="BladeModeStates">
+                                <VisualState x:Name="Normal" />
+
+                                <VisualState x:Name="FullScreen">
+                                    <Storyboard>
+                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="ScrollViewer"
+                                                                       Storyboard.TargetProperty="HorizontalSnapPointsType">
+                                            <DiscreteObjectKeyFrame KeyTime="0"
+                                                                    Value="Mandatory" />
+                                        </ObjectAnimationUsingKeyFrames>
+                                    </Storyboard>
+                                </VisualState>
+                            </VisualStateGroup>
+                        </VisualStateManager.VisualStateGroups>
                     </Border>
                 </ControlTemplate>
             </Setter.Value>
