--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/AdvancedCollectionView/AdvancedCollectionViewPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/AdvancedCollectionView/AdvancedCollectionViewPage.xaml
@@ -1,17 +1,19 @@
-﻿<Page
-    x:Class="Microsoft.Toolkit.Uwp.SampleApp.SamplePages.AdvancedCollectionViewPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Microsoft.Toolkit.Uwp.SampleApp.SamplePages"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+﻿<Page x:Class="Microsoft.Toolkit.Uwp.SampleApp.SamplePages.AdvancedCollectionViewPage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:local="using:Microsoft.Toolkit.Uwp.SampleApp.SamplePages"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      mc:Ignorable="d">
     <Page.Resources>
         <DataTemplate x:Key="PersonDataTemplate">
-            <TextBlock Text="{Binding Name}" Foreground="{StaticResource Brush-White}" />
+            <TextBlock Foreground="{StaticResource Brush-White}"
+                       Text="{Binding Name}" />
         </DataTemplate>
     </Page.Resources>
-    <Grid MaxWidth="800" Padding="24" Background="{StaticResource Brush-Grey-05}">
+    <Grid MaxWidth="800"
+          Padding="24"
+          Background="{StaticResource Brush-Grey-05}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition />
             <ColumnDefinition />
@@ -21,13 +23,33 @@
             <RowDefinition Height="Auto" />
             <RowDefinition />
         </Grid.RowDefinitions>
-        <TextBlock Grid.ColumnSpan="2" TextWrapping="WrapWholeWords" Text="Items from the list are filtered and sorted. On the left you can see the original list and on the right the same one, bound via AdvancedCollectionView." />
-        <StackPanel Grid.ColumnSpan="2" Grid.Row="1" Grid.Column="0" Orientation="Horizontal" Margin="0,10">
-            <TextBlock Text="Add new item:" VerticalAlignment="Center" />
-            <TextBox Margin="10,0" Width="100" x:Name="NewItemBox" />
-            <Button Content="Add" x:Name="AddButton" />
+        <TextBlock Grid.ColumnSpan="2"
+                   Text="Items from the list are filtered and sorted. On the left you can see the original list and on the right the same one, bound via AdvancedCollectionView."
+                   TextWrapping="WrapWholeWords" />
+        <StackPanel Grid.Row="1"
+                    Grid.Column="0"
+                    Grid.ColumnSpan="2"
+                    Margin="0,10"
+                    Orientation="Horizontal">
+            <TextBlock VerticalAlignment="Center"
+                       Text="Add new item:" />
+            <TextBox x:Name="NewItemBox"
+                     Width="100"
+                     Margin="10,0" />
+            <Button x:Name="AddButton"
+                    Content="Add" />
         </StackPanel>
-        <ListView Background="{StaticResource Brush-Grey-01}" Grid.Row="2" Grid.Column="0" Margin="0,0,5,0" x:Name="LeftList" ItemTemplate="{StaticResource PersonDataTemplate}" />
-        <ListView Background="{StaticResource Brush-Grey-01}" Grid.Row="2" Grid.Column="1" Margin="5,0,0,0" x:Name="RightList" ItemTemplate="{StaticResource PersonDataTemplate}" />
+        <ListView x:Name="LeftList"
+                  Grid.Row="2"
+                  Grid.Column="0"
+                  Margin="0,0,5,0"
+                  Background="{StaticResource Brush-Grey-01}"
+                  ItemTemplate="{StaticResource PersonDataTemplate}" />
+        <ListView x:Name="RightList"
+                  Grid.Row="2"
+                  Grid.Column="1"
+                  Margin="5,0,0,0"
+                  Background="{StaticResource Brush-Grey-01}"
+                  ItemTemplate="{StaticResource PersonDataTemplate}" />
     </Grid>
 </Page>
