--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/BladeView/BladePage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/BladeView/BladePage.xaml
@@ -21,18 +21,21 @@
                                 IsOpen="True"
                                 TitleBarVisibility="Collapsed">
                 <StackPanel Margin="24">
-                    <TextBlock TextWrapping="WrapWholeWords" Text="This first blade has a hidden TitleBar, so you can't close it." />
+                    <TextBlock Text="This first blade has a hidden TitleBar, so you can't close it."
+                               TextWrapping="WrapWholeWords" />
 
-                    <TextBlock TextWrapping="WrapWholeWords" Margin="0,12,0,0" Text="The buttons below toggle more blades on and off. The blades appear in the order that they're opened." />
-                    <ToggleButton Margin="0, 24, 0, 0"
-                                  IsChecked="{Binding IsOpen, Mode=TwoWay, ElementName=SecondBlade}"
-                                  Content="Default blade" />
-                    <ToggleButton Margin="0, 24, 0, 0"
-                                  IsChecked="{Binding IsOpen, Mode=TwoWay, ElementName=ThirdBlade}"
-                                  Content="Custom titlebar" />
-                    <ToggleButton Margin="0, 24, 0, 0"
-                                  IsChecked="{Binding IsOpen, Mode=TwoWay, ElementName=FourthBlade}"
-                                  Content="Custom close button" />
+                    <TextBlock Margin="0,12,0,0"
+                               Text="The buttons below toggle more blades on and off. The blades appear in the order that they're opened."
+                               TextWrapping="WrapWholeWords" />
+                    <ToggleButton Margin="0,24,0,0"
+                                  Content="Default blade"
+                                  IsChecked="{Binding IsOpen, Mode=TwoWay, ElementName=SecondBlade}" />
+                    <ToggleButton Margin="0,24,0,0"
+                                  Content="Custom titlebar"
+                                  IsChecked="{Binding IsOpen, Mode=TwoWay, ElementName=ThirdBlade}" />
+                    <ToggleButton Margin="0,24,0,0"
+                                  Content="Custom close button"
+                                  IsChecked="{Binding IsOpen, Mode=TwoWay, ElementName=FourthBlade}" />
                 </StackPanel>
             </controls:BladeItem>
 
