--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Light/LightBehaviorPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Light/LightBehaviorPage.xaml
@@ -1,47 +1,45 @@
-﻿<Page
-    x:Class="Microsoft.Toolkit.Uwp.SampleApp.SamplePages.LightBehaviorPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Microsoft.Toolkit.Uwp.SampleApp.SamplePages.Light"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
-    xmlns:behaviors="using:Microsoft.Toolkit.Uwp.UI.Animations.Behaviors"
-    xmlns:core="using:Microsoft.Xaml.Interactions.Core"
-    mc:Ignorable="d">
+﻿<Page x:Class="Microsoft.Toolkit.Uwp.SampleApp.SamplePages.LightBehaviorPage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:behaviors="using:Microsoft.Toolkit.Uwp.UI.Animations.Behaviors"
+      xmlns:core="using:Microsoft.Xaml.Interactions.Core"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
+      xmlns:local="using:Microsoft.Toolkit.Uwp.SampleApp.SamplePages.Light"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <TextBlock Foreground="{ThemeResource TextSelectionHighlightColorThemeBrush}" 
-                   Text="Light effects are not available on your version of Windows 10" 
-                   HorizontalAlignment="Center" 
-                   VerticalAlignment="Top" 
-                   Margin="0, 20" 
-                   x:Name="WarningText" 
+        <TextBlock x:Name="WarningText"
+                   Margin="0,20"
+                   HorizontalAlignment="Center"
+                   VerticalAlignment="Top"
+                   Foreground="{ThemeResource TextSelectionHighlightColorThemeBrush}"
+                   Text="Light effects are not available on your version of Windows 10"
                    TextWrapping="Wrap"
                    Visibility="Collapsed" />
-        
-        <Image x:Name="ToolkitLogo" 
-               Source="ms-appx:///Assets/ToolkitLogo.png" 
-               Height="100" 
-               Width="100" >
+
+        <Image x:Name="ToolkitLogo"
+               Width="100"
+               Height="100"
+               Source="ms-appx:///Assets/ToolkitLogo.png">
             <interactivity:Interaction.Behaviors>
-                <behaviors:Light x:Name="LightBehavior" 
-                                   Distance="{Binding Distance.Value, Mode=OneWay}" 
-                                   Duration="{Binding Duration.Value, Mode=OneWay}" 
-                                   Delay="{Binding Delay.Value, Mode=OneWay}" 
-                                   AutomaticallyStart="{Binding AutomaticallyStart.Value, Mode=OneWay}"/>
+                <behaviors:Light x:Name="LightBehavior"
+                                 AutomaticallyStart="{Binding AutomaticallyStart.Value, Mode=OneWay}"
+                                 Delay="{Binding Delay.Value, Mode=OneWay}"
+                                 Distance="{Binding Distance.Value, Mode=OneWay}"
+                                 Duration="{Binding Duration.Value, Mode=OneWay}" />
             </interactivity:Interaction.Behaviors>
         </Image>
 
-        <StackPanel HorizontalAlignment="Right" 
+        <StackPanel HorizontalAlignment="Right"
                     VerticalAlignment="Bottom">
-            <Button Content="Apply" 
-                    Margin="10">
+            <Button Margin="10"
+                    Content="Apply">
                 <interactivity:Interaction.Behaviors>
                     <core:EventTriggerBehavior EventName="Click">
-                        <core:CallMethodAction 
-                            TargetObject="{Binding ElementName=LightBehavior}" 
-                            MethodName="StartAnimation"/>
+                        <core:CallMethodAction MethodName="StartAnimation"
+                                               TargetObject="{Binding ElementName=LightBehavior}" />
                     </core:EventTriggerBehavior>
                 </interactivity:Interaction.Behaviors>
             </Button>
