--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/ScrollHeader/ScrollHeaderPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/ScrollHeader/ScrollHeaderPage.xaml
@@ -8,7 +8,8 @@
       mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <ListView Name="listView" ItemsSource="{x:Bind _items, Mode=OneWay}">
+        <ListView Name="listView"
+                  ItemsSource="{x:Bind _items, Mode=OneWay}">
             <ListView.Header>
                 <controls:ScrollHeader Fade="{Binding Fade.Value}"
                                        QuickReturn="{Binding QuickReturn.Value}"
@@ -17,7 +18,8 @@
                     <Grid x:Name="MyHeaderGrid"
                           MinHeight="250"
                           Background="{StaticResource Brush-Blue-01}">
-                        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+                        <StackPanel HorizontalAlignment="Center"
+                                    VerticalAlignment="Center">
                             <TextBlock Margin="12"
                                        FontSize="48"
                                        FontWeight="Bold"
@@ -37,7 +39,8 @@
             </ListView.Header>
             <ListView.ItemTemplate>
                 <DataTemplate x:DataType="models:Item">
-                    <Grid MinHeight="100" Background="{StaticResource Brush-Grey-04}">
+                    <Grid MinHeight="100"
+                          Background="{StaticResource Brush-Grey-04}">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="Auto" />
                             <ColumnDefinition Width="*" />
