--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Useful links/UsefulLinksPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Useful links/UsefulLinksPage.xaml
@@ -8,67 +8,62 @@
         <ScrollViewer VerticalScrollBarVisibility="Auto">
             <StackPanel Margin="0,12,0,0"
                         HorizontalAlignment="Center">
-                <TextBlock 
-                    TextAlignment="Center"
-                    Margin="0,0,0,20"
-                    FontSize="22"
-                    Text="Links and resources"></TextBlock>
-                <StackPanel 
-                    Margin="0,0,0,36"
-                    HorizontalAlignment="Center"
-                    Orientation="Vertical">
-                    <TextBlock Text="Main entry point for all official UWP related resources"
-                               FontSize="18"
+                <TextBlock Margin="0,0,0,20"
+                           FontSize="22"
+                           Text="Links and resources"
+                           TextAlignment="Center" />
+                <StackPanel Margin="0,0,0,36"
+                            HorizontalAlignment="Center"
+                            Orientation="Vertical">
+                    <TextBlock Margin="0"
                                HorizontalAlignment="Center"
-                               Margin="0"/>
-                    <HyperlinkButton                                  
-                                 FontSize="18"
-                                 HorizontalAlignment="Center"
-                                 Foreground="{StaticResource Brush-Blue-01}"
-                                 NavigateUri="https://developer.microsoft.com/en-us/windows/apps/getstarted">
+                               FontSize="18"
+                               Text="Main entry point for all official UWP related resources" />
+                    <HyperlinkButton HorizontalAlignment="Center"
+                                     FontSize="18"
+                                     Foreground="{StaticResource Brush-Blue-01}"
+                                     NavigateUri="https://developer.microsoft.com/en-us/windows/apps/getstarted">
                         Developer Center
                     </HyperlinkButton>
                 </StackPanel>
-                <StackPanel 
-                    Margin="0,0,0,35"
-                    HorizontalAlignment="Center"
-                    Orientation="Vertical">
-                    <TextBlock Text="Getting started"
-                               FontSize="18"
+                <StackPanel Margin="0,0,0,35"
+                            HorizontalAlignment="Center"
+                            Orientation="Vertical">
+                    <TextBlock Margin="0"
                                HorizontalAlignment="Center"
-                               Margin="0"/>
+                               FontSize="18"
+                               Text="Getting started" />
                     <HyperlinkButton Margin="0"
-                                     FontSize="18"
                                      HorizontalAlignment="Center"
+                                     FontSize="18"
                                      Foreground="{StaticResource Brush-Blue-01}"
                                      NavigateUri="https://channel9.msdn.com/Series/C-Sharp-Fundamentals-Development-for-Absolute-Beginners">
                         C# fundamentals development for absolute beginners
-                    </HyperlinkButton>                    
+                    </HyperlinkButton>
                     <HyperlinkButton Margin="0,0,0,12"
-                                     FontSize="18"
                                      HorizontalAlignment="Center"
+                                     FontSize="18"
                                      Foreground="{StaticResource Brush-Blue-01}"
                                      NavigateUri="https://channel9.msdn.com/Series/Windows-10-development-for-absolute-beginners">
                         Windows 10 development for absolute beginners
                     </HyperlinkButton>
-                </StackPanel>         
-                <StackPanel 
-                    Margin="0,0,0,35"
-                    HorizontalAlignment="Center"
-                    Orientation="Vertical">
-                    <TextBlock Text="API samples for the Universal Windows Platform"
-                               FontSize="18"
+                </StackPanel>
+                <StackPanel Margin="0,0,0,35"
+                            HorizontalAlignment="Center"
+                            Orientation="Vertical">
+                    <TextBlock Margin="0"
                                HorizontalAlignment="Center"
-                               Margin="0"/>
-                    <HyperlinkButton FontSize="18"
-                                     HorizontalAlignment="Center"
+                               FontSize="18"
+                               Text="API samples for the Universal Windows Platform" />
+                    <HyperlinkButton HorizontalAlignment="Center"
+                                     FontSize="18"
                                      Foreground="{StaticResource Brush-Blue-01}"
                                      NavigateUri="https://developer.microsoft.com/en-us/windows/samples">
                         Dev Center Code Samples
                     </HyperlinkButton>
                     <HyperlinkButton Margin="0,0,0,12"
-                                     FontSize="18"
                                      HorizontalAlignment="Center"
+                                     FontSize="18"
                                      Foreground="{StaticResource Brush-Blue-01}"
                                      NavigateUri="https://github.com/Microsoft/Windows-universal-samples">
                         Windows 10 Samples
