--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/ParallaxService/ParallaxPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/ParallaxService/ParallaxPage.xaml
@@ -91,10 +91,10 @@ Morbi sed mauris nibh. Nulla id ligula luctus, auctor arcu sit amet, maximus met
                        an:ParallaxService.ScrollingElement="{Binding ElementName=HorizontalScroller}"
                        an:ParallaxService.HorizontalMultiplier="{Binding HorizontalMultiplier.Value}"/>
                 <StackPanel Orientation="Horizontal">
-                    <Rectangle Fill="Red" Opacity=".6" Width="200" Margin="12,24"/>
-                    <Rectangle Fill="Blue" Opacity=".6" Width="200" Margin="12,24"/>
-                    <Rectangle Fill="Yellow" Opacity=".6" Width="200" Margin="12,24"/>
-                    <Rectangle Fill="Green" Opacity=".6" Width="200" Margin="12,24"/>
+                    <Rectangle Fill="Black" Opacity=".6" Width="200" Margin="12,24"/>
+                    <Rectangle Fill="Black" Opacity=".6" Width="200" Margin="12,24"/>
+                    <Rectangle Fill="Black" Opacity=".6" Width="200" Margin="12,24"/>
+                    <Rectangle Fill="Black" Opacity=".6" Width="200" Margin="12,24"/>
                 </StackPanel>
             </Grid>
         </ScrollViewer>
