remove the ScrollingElement from the public API and get it by walking the tree up to find it. Set it in case the user changes the parallax values later

--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/ParallaxService/ParallaxPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/ParallaxService/ParallaxPage.xaml
@@ -12,12 +12,11 @@
             <ColumnDefinition/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <ScrollViewer x:Name="Scroller">
+        <ScrollViewer>
             <StackPanel>
                 <Image Source="ms-appx:///Assets/Photos/BigFourSummerHeat.png"
                        MaxHeight="500"
                        Stretch="UniformToFill"
-                       an:ParallaxService.ScrollingElement="{Binding ElementName=Scroller}"
                        an:ParallaxService.VerticalMultiplier="{Binding VerticalMultiplier.Value}"/>
                 <Border Background="{StaticResource Brush-Grey-05}">
                     <TextBlock TextWrapping="WrapWholeWords" FontSize="20">
@@ -32,8 +31,7 @@ Nam eu lobortis velit, ac lobortis nibh. Mauris facilisis urna mi, id iaculis le
                 </Border>
             </StackPanel>
         </ScrollViewer>
-        <ScrollViewer x:Name="HorizontalScroller" 
-                      Grid.Column="1"
+        <ScrollViewer Grid.Column="1"
                       HorizontalScrollBarVisibility="Auto"
                       HorizontalScrollMode="Enabled" 
                       VerticalScrollBarVisibility="Hidden"
@@ -41,7 +39,6 @@ Nam eu lobortis velit, ac lobortis nibh. Mauris facilisis urna mi, id iaculis le
             <Grid>
                 <Image Source="ms-appx:///Assets/Photos/BigFourSummerHeat.png"
                        Stretch="UniformToFill"
-                       an:ParallaxService.ScrollingElement="{Binding ElementName=HorizontalScroller}"
                        an:ParallaxService.HorizontalMultiplier="{Binding HorizontalMultiplier.Value}"/>
                 <StackPanel Orientation="Horizontal">
                     <Rectangle Fill="Black" Opacity=".6" Width="200" Margin="12,24"/>
